@@ -34,6 +34,7 @@ Changes in version 1.3.0:
   - Replaced ecdev_register() and ecdev_unregister() with ecdev_offer() and
     ecdev_withdraw(), respectively. The device modules now offer all their
     devices to the master. The master then decides, which ones to register.
+  - Replaced ecdev_link_state() with ecdev_set_link(); added ecdev_get_link().
 * All EEPROM write operations from user space are now blocking until
   writing has finished. Appropriate error codes are returned.
 * Implemented setting of the "Secondary slave address" (alias) via sysfs.
